# booru-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: regex_vs_split.rs
crawl/: Cargo.toml
examples/: cats.rs
examples/2cats/: Cargo.toml
examples/2cats/src/: main.rs
lib/hf/: Cargo.toml
lib/hf/src/: lib.rs
src/: board.rs  client.rs  lib.rs  main.rs  tags.rs  test_utils.rs
src/board/: danbooru.rs  safebooru.rs
src/board/danbooru/: response.rs  search.rs  tags.rs
src/board/danbooru/response/: post.rs  posts.rs  wiki_page.rs
