[package]
name = "booru"
version = "0.1.0"
edition = "2021"

[lib]
name = "booru"
path = "src/lib.rs"

[features]
default = []

cats = ["image", "imgcatr"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
indexmap = "2.4.0"
reqwest = { version = "0.12.7", features = [
    "json",
    "http3",
    "zstd",
    "brotli",
    "rustls-tls",
] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }

image = { version = "0.24.9", optional = true }
imgcatr = { version = "0.1.4", optional = true }

[dev-dependencies]
dotenv = "0.15.0"

[workspace]
members = ["bin/crawl", "bin/gather"]

[[example]]
name = "cats"
required-features = ["cats"]
